2009-12-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-tinyurl-get): Fix typo to resolve
	error "Symbol's value as variable is void". This problem was found
	by naota.

2009-12-25  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-show-minibuffer-length): disabled
	on Emacs21 because `minibufferp' is not available.
	(twittering-update-status-from-minibuffer): set
	`minibuffer-message-timeout' to `nil'. `t' causes error on
	Emacs23.

2009-12-23  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-show-minibuffer-length): New
	defun to show the number of charactors in minibuffer.
	(twittering-setup-minibuffer): New defun to add it to
	`after-change-functions'; invoke via `minibuffer-setup-hook'.
	(twittering-finish-minibuffer): New defun to remove it from
	`after-change-functions'; invoke via `minibuffer-exit-hook'.

	* twittering-mode.el (twittering-update-status-from-minibuffer):
	Set `minibuffer-setup-hook' and `minibuffer-exit-hook' temporarily.

2009-12-23  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (tinyurl): add test for tinyurl

	* twittering-mode.el (twittering-tinyurl-get): fix for emacs22.
	In emacs22, there's "^M" at the end of a buffer created by
	url-retrieve
	(twittering-tinyurl-get): fix by cvmat

2009-12-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-tinyurl-get): retrieves a
	shortened URL without `url-insert'.
	(twittering-url-copy-file-async): add new
	function for downloading a file asynchronously.
	(twittering-retrieve-image-without-wget): retrieves images
	asynchronously with `twittering-url-copy-file-async'.

2009-12-22  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-ucs-to-char): turned into
	function from macro
	(twittering-update-lambda, twittering-update-jojo): more portable
	string expression. Executable only in Japanese environment.